--- a/css/paki/media-style-funtome-paki.css
+++ b/css/paki/media-style-funtome-paki.css
@@ -149,10 +149,6 @@
 
     /* Media header + intro */
 
-    .features-container {
-        margin-top: 13px;
-    }
-
     .content-title-features {
         margin-bottom: 15px;
     }
@@ -163,9 +159,57 @@
 
     .paki {
         background-image: url('/img/funtome-paki/photo-paki-mob.jpg');
+        height: 610px;
+        border-radius: 0 0 32px 32px;
+    }
+
+    .intro.paki .border-box {
+        width: 100%;
+        max-width: 100%;
+        height: 612px;
+        background: linear-gradient(180deg, #989898 46.93%, #465B6F 95.86%);
+        position: absolute;
+        border-radius: 0 0 32px 32px;
+        z-index: -1;
+    }
+
+    .intro.paki .container {
+        height: 100%;
+    }
+
+    
+    .intro.paki .features-container {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        justify-content: center;
+        margin-top: 7px;
+    }
+
+    .intro.paki .features-banner-title {
+        height: 100%;
+    }
+
+    .intro.paki .content-text {
+        padding: 0;
+        color: #FFFFFF;
+    }
+
+    .content-title-features {
+        margin-bottom: 14px;
+    }
+
+    .content-text {
+        margin-top: 0;
     }
 
     /* Bar */
+
+    .content-block.paki-margin {
+        margin-top: 100px;
+    }
 
     .sorting-pak {
         display: flex;
